# multi-db-sql-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
db/: __init__.py
db/init/: 01_init_sales_db.sql
db/seeds/: __init__.py  constants.py  seed_inventory_db.py  seed_sales_db.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  SchemaPanel.jsx  SqlDisplay.jsx
src/agent/: graph.py  prompts.py  state.py
src/agent/nodes/: executor.py  router.py  schema_injector.py  sql_generator.py  synthesizer.py
src/api/: app.py  models.py
src/db/: connections.py
src/llm/: client.py
src/tools/: executor.py  schema.py
tests/phase01/: conftest.py  test_constants.py  test_db_connection.py  test_readonly_role.py  test_seed_data.py
tests/phase02/: conftest.py  test_schema.py  test_seed_data.py
tests/phase03/: conftest.py  test_executor.py  test_llm_client.py  test_schema_tool.py
tests/phase04/: conftest.py  test_prompts.py  test_sql_generator.py  test_state.py
tests/phase05/: conftest.py  test_executor_node.py  test_graph.py
tests/phase06/: conftest.py  test_full_pipeline.py  test_router.py  test_schema_injector.py  test_synthesizer.py
tests/phase07/: conftest.py  test_api.py
